--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,9 +14,9 @@ status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   baseUrl: /awto-uptime
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
+  logoUrl: https://storage.bhs.cloud.ovh.net/v1/AUTH_e8b3935ef608462ebc9cefa06e286b5e/public_gowgo_storage/2020/06/24/sdsdsd_KRRQFOAV31SJ63CF5AGU2LQR8AHU2G8G6JFBHA0Q.png
+  name: Awto Uptime
+  introTitle: "**Awto Uptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: Status
